# EmoCare

./: .gitignore  README.md  docker-compose.yml  makefile  openapi.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
backend/: .sample.env  Dockerfile  config.json  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  supervisord.conf
backend/apps/chat/: apps.py  models.py  urls.py
backend/apps/chat/migrations/: 0001_initial.py  0002_initial.py
backend/apps/chat/serializers/: chat_serializers.py
backend/apps/chat/services/: chat_services.py
backend/apps/chat/tests/: test_chat.py
backend/apps/chat/views/: chat_views.py
backend/apps/common/: utils.py
backend/apps/user_statistics/: apps.py  models.py  urls.py
backend/apps/user_statistics/migrations/: 0001_initial.py
backend/apps/user_statistics/serializers/: user_statistics_serializers.py
backend/apps/user_statistics/services/: user_statistics_services.py
backend/apps/user_statistics/tests/: test_user_statistics.py
backend/apps/user_statistics/views/: user_statistics_views.py
backend/apps/users/: admin.py  apps.py  managers.py  models.py  urls.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/serializers/: users_serializers.py
backend/apps/users/services/: users_services.py
backend/apps/users/tests/: test_users.py
backend/apps/users/views/: users_views.py
backend/config/: config.py  settings.py  urls.py
docs/: resource.md
frontend/: jsconfig.json  package.json  vite.config.js
(+65 files in other folders)
