[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
django = "5.1.4"
django-environ = "0.11.2"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
line-bot-sdk = "3.14.2"
openai = "<2.0.0"
protobuf = "4.24.4"
django-cors-headers = "4.3.1"
google-cloud-language = "2.11.1"
pillow = "10.1.0"
scipy = "1.11.4"
zxcvbn = "4.4.28"
gunicorn = "23.0.0"
pyyaml = "^6.0.2"
uritemplate = "^4.1.1"
inflection = "^0.5.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
